--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>renovate/preset:default",
-    "local>renovate/preset:groupAllNonMajor",
+    "config:base",
     ":switchToGradleLite",
     "schedule:daily"
   ]
