--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base",
-    ":switchToGradleLite",
-    "schedule:daily"
-  ]
+  "extends": ["config:base", ":preserveSemverRanges", ":timezone(Australia/Melbourne)"]
 }
