--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,18 @@
 {
-  "extends": ["config:base", ":preserveSemverRanges", ":timezone(Australia/Melbourne)"]
+  "dependencyDashboard": "true",
+    "major": {
+        "dependencyDashboardApproval": "true"
+    },
+    "git-submodules": {
+        "enabled": false
+    },
+    "lockFileMaintenance": {
+        "enabled": true
+    },
+    "cloneSubmodules": false,
+    "extends": [
+      "config:base", 
+      ":preserveSemverRanges", 
+      ":switchToGradleLite",
+      "schedule:daily"]
 }
