--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,14 @@
 {
   "dependencyDashboard": "true",
+    "major": {
+        "dependencyDashboardApproval": "true"
+    },
+    "git-submodules": {
+        "enabled": false
+    },
+    "lockFileMaintenance": {
+        "enabled": true
+    },
     "cloneSubmodules": false,
     "extends": [
       "config:base", 
