--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion versions.compileSdk
+    compileSdkVersion rootProject.ext.compileSdk
     defaultConfig {
         applicationId "com.jingtian.study"
-        minSdkVersion versions.minSdk
-        targetSdkVersion versions.compileSdk
-        versionCode versions.versionCode
-        versionName versions.versionName
+        minSdkVersion minSdk
+        targetSdkVersion compileSdk
+        versionCode versionCode
+        versionName versionName
         testInstrumentationRunner "com.skydoves.disneycompose.AppTestRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -37,7 +37,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion versions.composeVersion
+        kotlinCompilerExtensionVersion composeVersion
     }
 
     kotlinOptions {
@@ -65,73 +65,73 @@ android {
 
 dependencies {
     // material
-    implementation "com.google.android.material:material:$versions.materialVersion"
+    implementation "com.google.android.material:material:$materialVersion"
 
     // compose
-    implementation "androidx.compose.ui:ui:$versions.composeVersion"
-    implementation "androidx.activity:activity-compose:$versions.activityVersion"
-    implementation "androidx.compose.material:material:$versions.composeVersion"
-    implementation "androidx.compose.material:material-icons-extended:$versions.composeVersion"
-    implementation "androidx.compose.foundation:foundation:$versions.composeVersion"
-    implementation "androidx.compose.foundation:foundation-layout:$versions.composeVersion"
-    implementation "androidx.compose.animation:animation:$versions.composeVersion"
-    implementation "androidx.compose.runtime:runtime:$versions.composeVersion"
-    implementation "androidx.compose.runtime:runtime-livedata:$versions.composeVersion"
-    implementation "androidx.navigation:navigation-compose:$versions.composeNavVersion"
-    implementation "androidx.compose.ui:ui-tooling:$versions.composeVersion"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$versions.composeVersion"
-    implementation "androidx.constraintlayout:constraintlayout-compose:$versions.constraintVersion"
+    implementation "androidx.compose.ui:ui:$composeVersion"
+    implementation "androidx.activity:activity-compose:$activityVersion"
+    implementation "androidx.compose.material:material:$composeVersion"
+    implementation "androidx.compose.material:material-icons-extended:$composeVersion"
+    implementation "androidx.compose.foundation:foundation:$composeVersion"
+    implementation "androidx.compose.foundation:foundation-layout:$composeVersion"
+    implementation "androidx.compose.animation:animation:$composeVersion"
+    implementation "androidx.compose.runtime:runtime:$composeVersion"
+    implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
+    implementation "androidx.navigation:navigation-compose:$composeNavVersion"
+    implementation "androidx.compose.ui:ui-tooling:$composeVersion"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$composeVersion"
+    implementation "androidx.constraintlayout:constraintlayout-compose:$constraintVersion"
 
     // accompanist
-    implementation "com.google.accompanist:accompanist-insets:$versions.accompanistVersion"
-    implementation "com.google.accompanist:accompanist-swiperefresh:$versions.accompanistVersion"
-    implementation "com.google.accompanist:accompanist-pager:$versions.accompanistVersion"
-    implementation "com.google.accompanist:accompanist-pager-indicators:$versions.accompanistVersion"
+    implementation "com.google.accompanist:accompanist-insets:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-pager:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanistVersion"
 
     //coil
-    implementation "io.coil-kt:coil:$versions.coilVersion"
-    implementation "io.coil-kt:coil-compose:$versions.coilVersion"
-    implementation "io.coil-kt:coil-gif:$versions.coilVersion"
+    implementation "io.coil-kt:coil:$coilVersion"
+    implementation "io.coil-kt:coil-compose:$coilVersion"
+    implementation "io.coil-kt:coil-gif:$coilVersion"
 
     // architecture components
-    implementation "androidx.fragment:fragment-ktx:$versions.fragmentVersion"
-    implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycleVersion"
-    implementation "androidx.room:room-runtime:$versions.roomVersion"
-    implementation "androidx.room:room-ktx:$versions.roomVersion"
-    kapt "androidx.room:room-compiler:$versions.roomVersion"
-    testImplementation "androidx.arch.core:core-testing:$versions.archCompomentVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    testImplementation "androidx.arch.core:core-testing:$archCompomentVersion"
 
 
     // hilt
-    implementation "com.google.dagger:hilt-android:$versions.hiltCoreVersion"
-    implementation "androidx.hilt:hilt-navigation-compose:$versions.hiltComposeNavigation"
-    kapt "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
-    kapt "androidx.hilt:hilt-compiler:$versions.hiltVersion"
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$versions.hiltCoreVersion"
-    kaptAndroidTest "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
+    implementation "com.google.dagger:hilt-android:$hiltCoreVersion"
+    implementation "androidx.hilt:hilt-navigation-compose:$hiltComposeNavigation"
+    kapt "com.google.dagger:hilt-compiler:$hiltCoreVersion"
+    kapt "androidx.hilt:hilt-compiler:$hiltVersion"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hiltCoreVersion"
+    kaptAndroidTest "com.google.dagger:hilt-compiler:$hiltCoreVersion"
 
     // network
-    implementation "com.squareup.okhttp3:logging-interceptor:$versions.okhttpVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$versions.retrofitVersion"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$versions.okhttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
 
     // coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
 
     // unit test
-    testImplementation "junit:junit:$versions.junitVersion"
-    testImplementation "androidx.test:core:$versions.androidxTest"
-    testImplementation "io.mockk:mockk::$versions.mockkVersion"
-    testImplementation "app.cash.turbine:turbine:$versions.turbineVersion"
-    testImplementation "org.robolectric:robolectric:$versions.robolectricVersion"
-    androidTestImplementation "com.google.truth:truth:$versions.truthVersion"
-    androidTestImplementation "androidx.test.ext:junit:$versions.androidxTestJunit"
-    androidTestImplementation "com.android.support.test:runner:$versions.androidTestRunner"
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation "androidx.test:core:$androidxTest"
+    testImplementation "io.mockk:mockk::$mockkVersion"
+    testImplementation "app.cash.turbine:turbine:$turbineVersion"
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+    androidTestImplementation "com.google.truth:truth:$truthVersion"
+    androidTestImplementation "androidx.test.ext:junit:$androidxTestJunit"
+    androidTestImplementation "com.android.support.test:runner:$androidTestRunner"
 }
 
 ktlint {
