--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
     compileSdkVersion rootProject.ext.compileSdk
     defaultConfig {
         applicationId "com.jingtian.study"
-        minSdkVersion minSdk
-        targetSdkVersion compileSdk
-        versionCode versionCode
-        versionName versionName
+        minSdkVersion rootProject.ext.minSdk
+        targetSdkVersion rootProject.ext.compileSdk
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         testInstrumentationRunner "com.skydoves.disneycompose.AppTestRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -65,73 +65,73 @@ android {
 
 dependencies {
     // material
-    implementation "com.google.android.material:material:$materialVersion"
+    implementation "com.google.android.material:material:$rootProject.ext.materialVersion"
 
     // compose
-    implementation "androidx.compose.ui:ui:$composeVersion"
-    implementation "androidx.activity:activity-compose:$activityVersion"
-    implementation "androidx.compose.material:material:$composeVersion"
-    implementation "androidx.compose.material:material-icons-extended:$composeVersion"
-    implementation "androidx.compose.foundation:foundation:$composeVersion"
-    implementation "androidx.compose.foundation:foundation-layout:$composeVersion"
-    implementation "androidx.compose.animation:animation:$composeVersion"
-    implementation "androidx.compose.runtime:runtime:$composeVersion"
-    implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
-    implementation "androidx.navigation:navigation-compose:$composeNavVersion"
-    implementation "androidx.compose.ui:ui-tooling:$composeVersion"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$composeVersion"
-    implementation "androidx.constraintlayout:constraintlayout-compose:$constraintVersion"
+    implementation "androidx.compose.ui:ui:$rootProject.ext.composeVersion"
+    implementation "androidx.activity:activity-compose:$rootProject.ext.activityVersion"
+    implementation "androidx.compose.material:material:$rootProject.ext.composeVersion"
+    implementation "androidx.compose.material:material-icons-extended:$rootProject.ext.composeVersion"
+    implementation "androidx.compose.foundation:foundation:$rootProject.ext.composeVersion"
+    implementation "androidx.compose.foundation:foundation-layout:$rootProject.ext.composeVersion"
+    implementation "androidx.compose.animation:animation:$rootProject.ext.composeVersion"
+    implementation "androidx.compose.runtime:runtime:$rootProject.ext.composeVersion"
+    implementation "androidx.compose.runtime:runtime-livedata:$rootProject.ext.composeVersion"
+    implementation "androidx.navigation:navigation-compose:$rootProject.ext.composeNavVersion"
+    implementation "androidx.compose.ui:ui-tooling:$rootProject.ext.composeVersion"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$rootProject.ext.composeVersion"
+    implementation "androidx.constraintlayout:constraintlayout-compose:$rootProject.ext.constraintVersion"
 
     // accompanist
-    implementation "com.google.accompanist:accompanist-insets:$accompanistVersion"
-    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanistVersion"
-    implementation "com.google.accompanist:accompanist-pager:$accompanistVersion"
-    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-insets:$rootProject.ext.accompanistVersion"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$rootProject.ext.accompanistVersion"
+    implementation "com.google.accompanist:accompanist-pager:$rootProject.ext.accompanistVersion"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$rootProject.ext.accompanistVersion"
 
     //coil
-    implementation "io.coil-kt:coil:$coilVersion"
-    implementation "io.coil-kt:coil-compose:$coilVersion"
-    implementation "io.coil-kt:coil-gif:$coilVersion"
+    implementation "io.coil-kt:coil:$rootProject.ext.coilVersion"
+    implementation "io.coil-kt:coil-compose:$rootProject.ext.coilVersion"
+    implementation "io.coil-kt:coil-gif:$rootProject.ext.coilVersion"
 
     // architecture components
-    implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
-    implementation "androidx.room:room-runtime:$roomVersion"
-    implementation "androidx.room:room-ktx:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
-    testImplementation "androidx.arch.core:core-testing:$archCompomentVersion"
+    implementation "androidx.fragment:fragment-ktx:$rootProject.ext.fragmentVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.ext.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.ext.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.ext.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.ext.lifecycleVersion"
+    implementation "androidx.room:room-runtime:$rootProject.ext.roomVersion"
+    implementation "androidx.room:room-ktx:$rootProject.ext.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.ext.roomVersion"
+    testImplementation "androidx.arch.core:core-testing:$rootProject.ext.archCompomentVersion"
 
 
     // hilt
-    implementation "com.google.dagger:hilt-android:$hiltCoreVersion"
-    implementation "androidx.hilt:hilt-navigation-compose:$hiltComposeNavigation"
-    kapt "com.google.dagger:hilt-compiler:$hiltCoreVersion"
-    kapt "androidx.hilt:hilt-compiler:$hiltVersion"
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$hiltCoreVersion"
-    kaptAndroidTest "com.google.dagger:hilt-compiler:$hiltCoreVersion"
+    implementation "com.google.dagger:hilt-android:$rootProject.ext.hiltCoreVersion"
+    implementation "androidx.hilt:hilt-navigation-compose:$rootProject.ext.hiltComposeNavigation"
+    kapt "com.google.dagger:hilt-compiler:$rootProject.ext.hiltCoreVersion"
+    kapt "androidx.hilt:hilt-compiler:$rootProject.ext.hiltVersion"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$rootProject.ext.hiltCoreVersion"
+    kaptAndroidTest "com.google.dagger:hilt-compiler:$rootProject.ext.hiltCoreVersion"
 
     // network
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okhttpVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$rootProject.ext.okhttpVersion"
 
     // coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$rootProject.ext.coroutinesVersion"
 
     // unit test
-    testImplementation "junit:junit:$junitVersion"
-    testImplementation "androidx.test:core:$androidxTest"
-    testImplementation "io.mockk:mockk::$mockkVersion"
-    testImplementation "app.cash.turbine:turbine:$turbineVersion"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
-    androidTestImplementation "com.google.truth:truth:$truthVersion"
-    androidTestImplementation "androidx.test.ext:junit:$androidxTestJunit"
-    androidTestImplementation "com.android.support.test:runner:$androidTestRunner"
+    testImplementation "junit:junit:$rootProject.ext.junitVersion"
+    testImplementation "androidx.test:core:$rootProject.ext.androidxTest"
+    testImplementation "io.mockk:mockk::$rootProject.ext.mockkVersion"
+    testImplementation "app.cash.turbine:turbine:$rootProject.ext.turbineVersion"
+    testImplementation "org.robolectric:robolectric:$rootProject.ext.robolectricVersion"
+    androidTestImplementation "com.google.truth:truth:$rootProject.ext.truthVersion"
+    androidTestImplementation "androidx.test.ext:junit:$rootProject.ext.androidxTestJunit"
+    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.androidTestRunner"
 }
 
 ktlint {
