--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,6 @@
     },
     "extends": [
       "config:base", 
-      ":switchToGradleLite",
-      "schedule:daily"
+      ":switchToGradleLite"
     ]
 }
