--- a/renovate.json
+++ b/renovate.json
@@ -10,5 +10,16 @@
       "config:base", 
       ":switchToGradleLite",
       "schedule:daily"
+    ],
+  "regexManagers": [
+     {
+      "description": "Detect kt under buildSrc",
+      "fileMatch": ["buildSrc/.+/Dependencies(-test)*.kt"],
+      "matchStrings": [
+        "val (?<depName>.*) = (?<currentValue>\d+.\d+[.\d]*)"
+      ],
+      "datasourceTemplate": "maven",
+      "versioningTemplate": "gradle"
+      },
     ]
 }
