--- a/renovate.json5
+++ b/renovate.json5
@@ -14,6 +14,7 @@
   "regexManagers": [
      {
       "fileMatch": ["buildSrc/.+/Dependencies(-test)*.kt"],
+       "matchStrings": ["[a-zA-Z]+Version = (?<currentValue>.*?)\n"],
       "versioningTemplate": "gradle"
       }
     ]
