--- a/renovate.json5
+++ b/renovate.json5
@@ -18,6 +18,7 @@
       "matchStrings": [
         "(?<depName>[a-z.-]*:[a-z-]*):(?<currentValue>\d+.\d+[.\d]*)"
       ],
+      "datasourceTemplate": "maven",
       "versioningTemplate": "gradle"
       }
     ]
