--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,16 @@
     "extends": [
       "config:base", 
       ":switchToGradleLite"
+    ],
+  "regexManagers": [
+     {
+      "description": "Detect kt under buildSrc",
+      "fileMatch": ["buildSrc/.+/Dependencies(-test)*.kt"],
+      "matchStrings": [
+        "coilVersion = (?<currentValue>.*?)\n"
+      ],
+      "datasourceTemplate": "GitHub",
+      "depNameTemplate": "io.coil-kt:coil"
+      }
     ]
 }
