--- a/renovate.json
+++ b/renovate.json
@@ -18,7 +18,7 @@
         "coilVersion = (?<currentValue>.*?)\n"
       ],
       "datasourceTemplate": "GitHub",
-      "depNameTemplate": "io.coil-kt:coil"
+      "depNameTemplate": "coil-kt/coil"
       }
     ]
 }
