--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
   "regexManagers": [
      {
       "description": "Detect kt under buildSrc",
-      "fileMatch": ["buildSrc/.+/Dependencies(-test)*.kt"],
+      "fileMatch": ["(^|/)buildSrc/.*"],
       "matchStrings": [
         "coilVersion = (?<currentValue>.*?)\n"
       ],
