--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,28 @@
     "extends": [
       "config:base", 
       ":switchToGradleLite"
+    ]{
+  "dependencyDashboard": "true",
+    "major": {
+        "dependencyDashboardApproval": "true"
+    },
+    "lockFileMaintenance": {
+        "enabled": true
+    },
+    "extends": [
+      "config:base", 
+      ":switchToGradleLite"
+    ],
+  "regexManagers": [
+     {
+      "description": "Detect kt under buildSrc",
+      "fileMatch": ["(^|/)buildSrc/.*"],
+      "matchStrings": [
+        "coilVersion = \"(?<currentValue>.*?)\"\n"
+      ],
+      "datasourceTemplate": "gradle-version",
+      "depNameTemplate": "coil-kt/coil"
+      }
     ]
+  }
 }
