--- a/renovate.json
+++ b/renovate.json
@@ -18,7 +18,7 @@
         "coilVersion = \"(?<currentValue>.*?)\"\n"
       ],
       "datasourceTemplate": "maven",
-      "depNameTemplate": "coil-kt/coil"
+      "depNameTemplate": "io.coil-kt/coil"
       }
     ]
 }
