--- a/renovate.json
+++ b/renovate.json
@@ -1,30 +1,36 @@
 {
   "dependencyDashboard": "true",
-    "major": {
-        "dependencyDashboardApproval": "true"
-    },
-    "lockFileMaintenance": {
-        "enabled": true
-    },
-    "extends": [
-      "config:base", 
-      ":switchToGradleLite"
-    ],
+  "major": {
+    "dependencyDashboardApproval": "true"
+  },
+  "lockFileMaintenance": {
+    "enabled": true
+  },
+  "extends": [
+    "config:base",
+    ":switchToGradleLite"
+  ],
+  "packageRules": [
+    {
+      "matchDatasources": [
+        "maven"
+      ],
+      "registryUrls": [
+        "https://dl.google.com/android/maven2/"
+      ]
+    }
+  ],
   "regexManagers": [
-     {
+    {
       "description": "Detect kt under buildSrc",
-      "fileMatch": ["(^|/)buildSrc/.*"],
+      "fileMatch": [
+        "(^|/)buildSrc/.*"
+      ],
       "matchStrings": [
         "coilVersion = \"(?<currentValue>.*?)\"\n"
       ],
       "datasourceTemplate": "maven",
-      "depNameTemplate": "io.coil-kt/coil",
-       "packageRules": [
-    {
-      "matchDatasources": ["maven"],
-      "registryUrls": ["https://dl.google.com/android/maven2/"]
+      "depNameTemplate": "io.coil-kt/coil"
     }
   ]
-      }
-    ]
 }
