--- a/renovate.json
+++ b/renovate.json
@@ -30,7 +30,7 @@
         "coilVersion = \"(?<currentValue>.*?)\"\n"
       ],
       "datasourceTemplate": "maven",
-      "depNameTemplate": "io.coil-kt/coil"
+      "depNameTemplate": "coil-kt/coil"
     }
   ]
 }
