--- a/renovate.json
+++ b/renovate.json
@@ -31,7 +31,7 @@
         "coilVersion = \"(?<currentValue>.*?)\"\n"
       ],
       "datasourceTemplate": "maven",
-      "depNameTemplate": "coil-kt/coil"
+      "depNameTemplate": "io.coil-kt/coil"
     }
   ]
 }
